force-app/main/default/objects/ffr__DataViewAction__c/ffr__DataViewAction__c.object-meta.xml
<CustomObject>
    <description>Stores details of an action that has been enabled on a dataview.</description>
    <label>Dataview Action</label>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dataview Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>