force-app/main/default/objects/ffr__DataViewAction__c/fields/ffr__ApexClass__c.field-meta.xml
<CustomField>
    <fullName>ffr__ApexClass__c</fullName>
    <label>Apex Class</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>