force-app/main/default/objects/ffr__DataViewAction__c/fields/ffr__Dataview__c.field-meta.xml
<CustomField>
    <fullName>ffr__Dataview__c</fullName>
    <label>Dataview</label>
    <referenceTo>ffr__DataView__c</referenceTo>
    <relationshipLabel>Dataview Actions</relationshipLabel>
    <relationshipName>DataviewActions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>