force-app/main/default/objects/ffr__DataViewAction__c/fields/ffr__Description__c.field-meta.xml
<CustomField>
    <fullName>ffr__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>