force-app/main/default/objects/ffr__DataViewAction__c/fields/ffr__Parameter__c.field-meta.xml
<CustomField>
    <fullName>ffr__Parameter__c</fullName>
    <label>Parameter</label>
    <length>40</length>
    <type>Text</type>
</CustomField>